<resources>
    <string name="app_name">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_timeslot_list">My Timeslots</string>
    <string name="menu_timeslot_details">Timeslot Details</string>
    <string name="menu_timeslot_edit">Timeslot Edit</string>
    <string name="menu_show_profile">Show profile</string>
    <string name="menu_edit_profile">Edit profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_requests">Requests</string>

    <!-- fake data -->
    <string name="user_profile_name">Name</string>
    <string name="user_profile_surname">Surname</string>
    <string name="user_profile_nickname">\@nickname</string>
    <string name="user_profile_bio">«Bio»</string>
    <string name="user_profile_email">e.mail@email.it</string>
    <string name="user_profile_phone">+39333123456789</string>
    <string name="user_profile_balance">5 TCU</string>
    <string name="user_profile_location">Turin, Italy</string>

    <!-- placeholders -->
    <string name="user_profile_nickname_placeholder">\@%1$s</string>
    <string name="user_profile_balance_placeholder">%1$s TCU</string>
    <string name="user_profile_bio_placeholder">«%1$s»</string>
    <string name="home_skill_number_placeholder">(%1$s)</string>
    <string name="date_placeholder">dd/mm/yyyy</string>
    <string name="hour_placeholder">hh:mm</string>
    <string name="duration_placeholder">--h --m</string>
    <string name="message_placeholder">This is my message that will wrap into multiple lines and keep on going</string>
    <string name="rating_comment_placeholder">«%1$s»</string>
    <string name="cost_placeholder">%1$s TCU</string>


    <!-- labels -->
    <string name="user_profile_balance_label">Balance</string>
    <string name="user_profile_info_label">User information</string>
    <string name="user_profile_skills_label">Skills</string>
    <string name="user_profile_phone_label">Phone</string>
    <string name="user_profile_email_label">Email</string>
    <string name="user_profile_location_label">Location</string>
    <string name="user_profile_picture_label">Location</string>
    <string name="user_profile_save_label">Save</string>
    <string name="user_profile_active_label">Active</string>
    <string name="user_profile_ratings_publisher_label">As Publisher:</string>
    <string name="user_profile_ratings_client_label">As Client:</string>
    <string name="user_profile_avg_rating_label">Avg. rating</string>

    <string name="timeslot_title">Title</string>
    <string name="timeslot_location">Location</string>
    <string name="timeslot_date">Date</string>
    <string name="timeslot_hour">Hour</string>

    <string name="filers_apply">Apply filters</string>
    <string name="filter_min_duration">Min:</string>
    <string name="filter_max_duration">Max:</string>
    <string name="filter_min_date">Min:</string>
    <string name="filter_max_date">Max:</string>
    <string name="filter_min_time">From:</string>
    <string name="filter_max_time">To:</string>

    <string name="sort_by_label">Sort by:</string>

    <string-array name="repetitionMw">
        <item id="isWeekly">Weekly</item>
        <item id="isMonthly">Monthly</item>
    </string-array>

    <string name="tab_requests_for_my_timeslots">Requests received</string>
    <string name="tab_requests_i_made">Requests sent</string>
    <string name="tab_user_info">Info</string>
    <string name="tab_user_skills">Skills</string>
    <string name="tab_user_ratings">Ratings</string>

    <string name="btn_accept_request">Accept request</string>
    <string name="btn_reject_request">Reject request</string>
    <string name="btn_completed">Mark as completed</string>

    <string name="leave_feedback">Please, leave a feedback!</string>
    <string name="send_feedback">Send</string>

    <!-- hints -->
    <string name="user_profile_hint_name">Name</string>
    <string name="user_profile_hint_surname">Surname</string>
    <string name="user_profile_hint_nickname">Nickname</string>
    <string name="user_profile_hint_bio">Bio</string>
    <string name="user_profile_hint_email">Email</string>
    <string name="user_profile_hint_phone">Phone</string>
    <string name="user_profile_hint_location">Location</string>
    <string name="user_skill_hint_description">Description</string>
    <string name="sort_by_hint">sortingField</string>
    <string name="rating_nickname">Nickname</string>
    <string name="rating_comment">Comment</string>

    <string name="rating_hint">Leave a comment (optional)</string>

    <!-- paths and directories -->
    <string name="shared_preferences">sharedpreferences</string>
    <string name="profile_tag">profile</string>
    <string name="timeslots_tag">timeslots</string>
    <string name="profile_pic_path">images</string>
    <string name="profile_pic_name">profile.jpg</string>

    <!-- separators -->
    <string name="starting_hour_dash_ending_hour">%s - %s  (%s)</string>

    <string name="web_client_id">
        903427285285-pu25cc7cdjtrb0dbpj5lucdi8jalollk.apps.googleusercontent.com
    </string>

    <!-- messages -->
    <string name="welcome_string1">Hello!</string>
    <string name="welcome_string2">What do you need today?</string>
    <string name="already_assigned_title">Already assigned</string>
    <string name="already_assigned_message">The publisher of this offer assigned it to another user. You can try to explore the home and see if there are other offers, though! :)</string>

    <string name="empty_timeslot_list_message">The list of your timeslots is empty, press the button below to add one.</string>
    <string name="empty_category_map_message">There are no timeslot from other users yet.</string>

    <!-- category in filtered list -->
    <string name="nav_filtered_label">Browsing: {category}</string>

    <!-- title in chat fragment -->
    <string name="nav_chat_label">{title}</string>


</resources>