<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_timeslot_list" />
        <item
            android:id="@+id/nav_details"
            android:icon="@drawable/ic_menu_details"
            android:title="@string/menu_timeslot_details" />
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/ic_menu_edit"
            android:title="@string/menu_timeslot_edit" />
        <item
            android:id="@+id/nav_show_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_show_profile" />
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_menu_edit"
            android:title="@string/menu_edit_profile" />
    </group>
</menu>