<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navHeaderLayout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/navHeaderImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/huge_distance"
        android:layout_marginBottom="@dimen/medium_distance"
        android:contentDescription="@string/nav_header_desc"
        app:layout_constraintBottom_toTopOf="@+id/navHeaderName"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/navHeaderName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tiny_distance"
        android:text="@string/user_profile_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/navHeaderBalance"
        app:layout_constraintStart_toStartOf="@+id/navHeaderImage" />

    <TextView
        android:id="@+id/navHeaderSurname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_distance"
        android:text="@string/user_profile_surname"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/navHeaderName"
        app:layout_constraintTop_toTopOf="@+id/navHeaderName" />

    <TextView
        android:id="@+id/navHeaderBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_distance"
        android:text="@string/user_profile_balance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/navHeaderName" />
</androidx.constraintlayout.widget.ConstraintLayout>