<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/infoAndSkillsScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/infoAndSkillsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/user_profile_phone_label"
            android:paddingStart="@dimen/medium_distance"
            android:paddingTop="@dimen/small_distance"
            android:paddingEnd="@dimen/medium_distance"
            android:paddingBottom="@dimen/small_distance"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView">

            <TextView
                android:id="@+id/textBalanceLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_distance"
                android:text="@string/user_profile_balance_label"
                android:textSize="@dimen/profile_text_size_normal"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewBalanceIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_distance"
                android:contentDescription="@string/user_profile_balance_label"
                android:src="@drawable/ic_baseline_timer_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textBalanceLabel" />

            <TextView
                android:id="@+id/textBalance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/medium_distance"
                android:paddingEnd="@dimen/medium_distance"
                android:text="@string/user_profile_balance"
                android:textSize="@dimen/profile_text_size_small"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewBalanceIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewBalanceIcon"
                app:layout_constraintTop_toTopOf="@+id/imageViewBalanceIcon" />

            <TextView
                android:id="@+id/textUserinfoLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_distance"
                android:text="@string/user_profile_info_label"
                android:textSize="@dimen/profile_text_size_normal"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewBalanceIcon" />

            <TextView
                android:id="@+id/textBio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_distance"
                android:text="@string/user_profile_bio"
                android:textSize="@dimen/profile_text_size_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textUserinfoLabel" />

            <ImageView
                android:id="@+id/imageViewPhoneIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_distance"
                android:contentDescription="@string/user_profile_phone_label"
                android:src="@drawable/ic_baseline_local_phone_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textBio" />

            <TextView
                android:id="@+id/textPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/user_profile_phone"
                android:textSize="@dimen/profile_text_size_small"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewPhoneIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewPhoneIcon"
                app:layout_constraintTop_toBottomOf="@+id/textBio" />

            <ImageView
                android:id="@+id/imageViewEmailIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_distance"
                android:contentDescription="@string/user_profile_email_label"
                android:src="@drawable/ic_baseline_email_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewPhoneIcon" />

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/user_profile_email"
                android:textSize="@dimen/profile_text_size_small"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewEmailIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewEmailIcon"
                app:layout_constraintTop_toBottomOf="@+id/imageViewPhoneIcon" />

            <ImageView
                android:id="@+id/imageViewLocationIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_distance"
                android:contentDescription="@string/user_profile_location_label"
                android:src="@drawable/ic_baseline_location_on_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewEmailIcon" />

            <TextView
                android:id="@+id/textLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/user_profile_location"
                android:textSize="@dimen/profile_text_size_small"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewLocationIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewLocationIcon"
                app:layout_constraintTop_toBottomOf="@+id/imageViewEmailIcon" />

            <TextView
                android:id="@+id/textSkillsLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_distance"
                android:text="@string/user_profile_skills_label"
                android:textSize="@dimen/profile_text_size_normal"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewLocationIcon" />


            <LinearLayout
                android:id="@+id/skillsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSkillsLabel"></LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>