<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_show_profile">

    <fragment
        android:id="@+id/nav_list"
        android:name="it.polito.mainactivity.ui.timeslot_list.TimeSlotListFragment"
        android:label="@string/menu_timeslot_list"
        tools:layout="@layout/fragment_timeslot_list" >
        <action
            android:id="@+id/action_nav_list_to_nav_edit"
            app:destination="@id/nav_edit"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_nav_list_to_nav_details"
            app:destination="@id/nav_details"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_details"
        android:name="it.polito.mainactivity.ui.timeslot_details.TimeSlotDetailsFragment"
        android:label="@string/menu_timeslot_details"
        tools:layout="@layout/fragment_timeslot_details" >
        <argument
            android:name="id"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit"
        android:name="it.polito.mainactivity.ui.timeslot_edit.TimeSlotEditFragment"
        android:label="@string/menu_timeslot_edit"
        tools:layout="@layout/fragment_timeslot_edit" />
    <fragment
        android:id="@+id/nav_show_profile"
        android:name="it.polito.mainactivity.ui.userprofile.showprofile.ShowProfileFragment"
        android:label="ShowProfileFragment" >
        <action
            android:id="@+id/action_nav_show_profile_to_nav_edit_profile"
            app:destination="@id/nav_edit_profile" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_profile"
        android:name="it.polito.mainactivity.ui.userprofile.editprofile.EditProfileFragment"
        android:label="EditProfileFragment">
    </fragment>

</navigation>